--- a/08-Omnifood-Responsive/index.html
+++ b/08-Omnifood-Responsive/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<header class="header nav-open">
+	<header class="header">
 		<a href="#">
 			<img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo">
 		</a>
@@ -499,7 +499,7 @@
 	</main>
 
 	<footer class="footer">
-		<div class="container grid grid--5-cols">
+		<div class="container grid grid--footer">
 			<div class="logo-col">
 				<a href="#" class="footer-logo">
 					<img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo">
