--- a/07-Omnifood_v3/index.html
+++ b/07-Omnifood_v3/index.html
@@ -13,27 +13,31 @@
 
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>Omnifood v2</title>
+	<title>Omnifood v3</title>
 </head>
 
 <body>
 	<section class="section-hero">
 		<div class="hero">
 			<div class="hero-text-box">
-				<h1 class="heading-primary">A healthy meal delivered to your door, every single day</h1>
-				<p class="hero-description">The smart 365-days-per-year food subscription that will make you eat healthy
+				<h1 class="heading-primary">
+					A healthy meal delivered to your door, every single day
+				</h1>
+				<p class="hero-description">
+					The smart 365-days-per-year food subscription that will make you eat healthy
 					again. Tailored to your personal tastes and
-					nutritional needs.</p>
+					nutritional needs.
+				</p>
 				<a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
-				<a href="#" class="btn btn--outline">Learn more &darr;</a>
+				<a href="#" class="btn btn--outline">Learn more ↓</a>
 				<div class="delivered-meals">
 					<div class="delivered-imgs">
-						<img src="img/customers/customer-1.jpg" alt="Customer photo">
-						<img src="img/customers/customer-2.jpg" alt="Customer photo">
-						<img src="img/customers/customer-3.jpg" alt="Customer photo">
-						<img src="img/customers/customer-4.jpg" alt="Customer photo">
-						<img src="img/customers/customer-5.jpg" alt="Customer photo">
-						<img src="img/customers/customer-6.jpg" alt="Customer photo">
+						<img src="img/customers/customer-1.jpg" alt="customer photo">
+						<img src="img/customers/customer-2.jpg" alt="customer photo">
+						<img src="img/customers/customer-3.jpg" alt="customer photo">
+						<img src="img/customers/customer-4.jpg" alt="customer photo">
+						<img src="img/customers/customer-5.jpg" alt="customer photo">
+						<img src="img/customers/customer-6.jpg" alt="customer photo">
 					</div>
 					<p class="delivered-text"><span>250,000+</span> meals last year!</p>
 				</div>
