--- a/07-Omnifood_v2/index.html
+++ b/07-Omnifood_v2/index.html
@@ -35,7 +35,7 @@
 						<img src="img/customers/customer-5.jpg" alt="Customer photo">
 						<img src="img/customers/customer-6.jpg" alt="Customer photo">
 					</div>
-					<p class="delivered-text"><span>250,000+</span> meals last year!</p>
+					<p class="delivered-text"></p>
 				</div>
 			</div>
 			<div class="hero-img-box">
