--- a/07-Omnifood_v2/index.html
+++ b/07-Omnifood_v2/index.html
@@ -11,6 +11,7 @@
 		href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=Rubik:wght@400;500;600;700&display=swap"
 		rel="stylesheet">
 
+	<link rel="stylesheet" href="css/general.css">
 	<link rel="stylesheet" href="css/style.css">
 
 	<title>Omnifood v2</title>
@@ -20,8 +21,7 @@
 
 	<header class="header">
 		<img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo">
-		<nav class="main-nav">
-			<ul class="main-nav-list">
+		<nav class="main-nav"	>		<ul class="main-nav-list">
 				<li><a class="main-nav-link" href="#">Section 1</a></li>
 				<li><a class="main-nav-link" href="#">Section 2</a></li>
 				<li><a class="main-nav-link" href="#">Section 3</a></li>
@@ -68,7 +68,7 @@
 					Your daily dose of health in 3 simple steps
 				</h2>
 			</div>
-			<div class="container grid grid--2-cols">
+			<div class="container grid grid--2-cols grid--center-v">
 				<!-- Step 01 -->
 				<div class="step-text-box">
 					<p class="step-number">01</p>
