--- a/07-Omnifood_v3/index.html
+++ b/07-Omnifood_v3/index.html
@@ -76,7 +76,7 @@
 				<div class="step-text-box">
 					<p class="step-number">01</p>
 					<h3 class="heading-tertiary">
-						Tell us hwat you like(and what not)
+						Tell us what you like(and what not)
 					</h3>
 					<p class="step-description">
 						Never again waste time thinking about what to eat! Omnifood AI will
