--- a/07-Omnifood_v3/index.html
+++ b/07-Omnifood_v3/index.html
@@ -64,6 +64,21 @@
 			</div>
 		</section>
 
+		<section class="section-featured">
+			<div class="container">
+				<h2 class="heading-featured-in">
+					As featured in
+				</h2>
+				<div class="logos">
+					<img src="img/logos/techcrunch.png" alt="Techcrunch logo">
+					<img src="img/logos/business-insider.png" alt="Business Insider logo">
+					<img src="img/logos/the-new-york-times.png" alt="The New York Times logo">
+					<img src="img/logos/forbes.png" alt="Forbes logo">
+					<img src="img/logos/usa-today.png" alt="USA Today logo">
+				</div>
+			</div>
+		</section>
+
 		<section class="section-how">
 			<div class="container">
 				<span class="subheading">How it works</span>
@@ -119,6 +134,12 @@
 					<img src="img/app/app-screen-3.png" alt="iPhone app delivery screen" class="step-img">
 				</div>
 
+			</div>
+		</section>
+
+		<section class="section-meals">
+			<div class="container">
+				
 			</div>
 		</section>
 	</main>
