--- a/07-Omnifood_v2/index.html
+++ b/07-Omnifood_v2/index.html
@@ -231,7 +231,7 @@
 			</div>
 		</section>
 
-		<section class="section-testimonials grid grid--2-cols">
+		<section class="section-testimonials">
 
 			<div class="testimonials-container">
 
@@ -283,6 +283,7 @@
 					</figure>
 				</div>
 			</div>
+
 			<div class="gallery">
 				<figure class="gallery-item">
 					<img src="img/gallery/gallery-1.jpg" alt="Photo of beautifully arranged food">
@@ -321,6 +322,7 @@
 					<img src="img/gallery/gallery-12.jpg" alt="Photo of beautifully arranged food">
 				</figure>
 			</div>
+
 		</section>
 	</main>
 
