--- a/07-Omnifood_v3/index.html
+++ b/07-Omnifood_v3/index.html
@@ -441,6 +441,32 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="section-cta">
+			<div class="container">
+				<div class="cta">
+					<div class="cta-text-box">
+						<h2 class="heading-secondary">
+							Get your first meal for free!
+						</h2>
+						<p class="cta-text">
+							Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
+						</p>
+					</div>
+
+					<form action="#" class="cta-form">
+						<div>
+							<label for="full-name">Full Name</label>
+							<input type="text" id="full-name" placeholder="John Smith" required>
+						</div>
+						<div>
+							<label for="">Email Address</label>
+							<input type="email" id="email" placeholder="me@example.com" required>
+						</div>
+					</form>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
