--- a/07-Omnifood_v5/index.html
+++ b/07-Omnifood_v5/index.html
@@ -441,6 +441,46 @@
 			</div>
 		</section>
 
+		<section class="section-cta">
+			<div class="container">
+				<div class="cta">
+					<div class="cta-text-box">
+						<h2 class="heading-secondary">
+							Get your first meal for free!
+						</h2>
+						<p class="cta-text">
+							Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. 
+							And the first meal is on us!
+						</p>
+
+						<form action="#" class="cta-form">
+							<div>
+								<label for="full-name">Full Name</label>
+								<input type="text" placeholder="John Smith" id="full-name" required>
+							</div>
+							<div>
+								<label for="email">Email Address</label>
+								<input type="email" placeholder="me@example.com" id="email" required>
+							</div>
+							<div>
+								<label for="select-where">Where did you hear about us?</label>
+								<select name="" id="select-where">
+									<option value="">Please choose an option:</option>
+									<option value="friends">Friends and family</option>
+									<option value="youtube">Youtube videos</option>
+									<option value="podcast">Podcast</option>
+									<option value="facebook">Facebook ad</option>
+								</select>
+							</div>
+							<button class="btn btn--form">Sign up now</button>
+						</form>
+					</div>
+					<div class="cta-img-box" role="img" aria-label="Women enjoying food">
+					</div>
+				</div>
+			</div>
+		</section>
+
 	</main>
 
 	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
