--- a/07-Omnifood_v4/index.html
+++ b/07-Omnifood_v4/index.html
@@ -450,7 +450,8 @@
 							Get your first meal for free!
 						</h2>
 						<p class="cta-text">
-							Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
+							Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can
+							cancel or pause anytime. And the first meal is on us!
 						</p>
 
 						<form action="#" class="cta-form">
@@ -483,6 +484,76 @@
 			</div>
 		</section>
 	</main>
+
+	<footer class="footer">
+		<div class="container grid grid--footer">
+			<div class="logo-col">
+				<a href="#" class="footer-logo">
+					<img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo">
+				</a>
+
+				<ul class="social-links">
+					<li>
+						<a href="#" class="footer-link">
+							<ion-icon class="social-icon" name="logo-instagram"></ion-icon>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="footer-link">
+							<ion-icon class="social-icon" name="logo-facebook"></ion-icon>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="footer-link">
+							<ion-icon class="social-icon" name="logo-twitter"></ion-icon>
+						</a>
+					</li>
+				</ul>
+
+				<p class="copyright">Copyright &copy; 2027 by Omnifood, All rights reserved.</p>
+			</div>
+
+			<div class="address-col">
+				<p class="footer-heading">Contact us</p>
+				<address class="contacts">
+					<p class="address">
+						623 Harrison St., 2nd Floor, San Francisco, CA 94107
+					</p>
+					<p>
+						<a href="tel:415-201-6370" class="footer-link">415-201-6370</a> <br>
+						<a href="mailto:hello@omnifood.com" class="footer-link">hello@omnifood.com</a>
+					</p>
+				</address>
+			</div>
+
+			<nav class="nav-col">
+				<p class="footer-heading">Account</p>
+				<ul class="footer-nav">
+					<li><a href="#" class="footer-link">Create account</a></li>
+					<li><a href="#" class="footer-link">Sign in</a></li>
+					<li><a href="#" class="footer-link">iOS app</a></li>
+					<li><a href="#" class="footer-link">Android app</a></li>
+				</ul>
+			</nav>
+			<nav class="nav-col">
+				<p class="footer-heading">Company</p>
+				<ul class="footer-nav">
+					<li><a href="#" class="footer-link">About Omnifood</a></li>
+					<li><a href="#" class="footer-link">For Business</a></li>
+					<li><a href="#" class="footer-link">Cooking partners</a></li>
+					<li><a href="#" class="footer-link">Careers</a></li>
+				</ul>
+			</nav>
+			<nav class="nav-col">
+				<p class="footer-heading">Resources</p>
+				<ul class="footer-nav">
+					<li><a href="#" class="footer-link">Recipes directory</a></li>
+					<li><a href="#" class="footer-link">Help center</a></li>
+					<li><a href="#" class="footer-link">Privacy & terms</a></li>
+				</ul>
+			</nav>
+		</div>
+	</footer>
 
 	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
