--- a/07-Omnifood_v6/index.html
+++ b/07-Omnifood_v6/index.html
@@ -138,7 +138,7 @@
 				</h2>
 			</div>
 
-			<div class="container grid grid--3cols margin-bottom-md">
+			<div class="container grid grid--3-cols margin-bottom-md">
 				<div class="meal">
 					<img src="img/meals/meal-1.jpg" alt="Japanese Gyozas" class="meal-img">
 					<div class="meal-content">
@@ -232,12 +232,14 @@
 			</div>
 
 			<div class="container all-recipes">
-				<a href="#" class="link">See all recipes</a>
+				<a href="#" class="link">See all recipes &rarr;</a>
 			</div>
 		</section>
 
 	</main>
 
+	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
