--- a/07-Omnifood_v6/index.html
+++ b/07-Omnifood_v6/index.html
@@ -243,42 +243,41 @@
 					Once you try it, you can't go back
 				</h2>
 
-
 				<div class="testimonials">
 					<figure class="testimonial">
 						<img src="img/customers/dave.jpg" alt="Photo of customer Dave Bryson" class="testimonial-img">
-						<blackquote class="testimonial-text">
+						<blockquote class="testimonial-text">
 							Inexpensive, healthy and great-testing meals, without even having to order manually! It
 							feels truly magical.
-						</blackquote>
+						</blockquote>
 						<p class="testimonial-name">&mdash; Dave Bryson</p>
 					</figure>
 
 					<figure class="testimonial">
 						<img src="img/customers/ben.jpg" alt="Photo of customer Ben Hadley" class="testimonial-img">
-						<blackquote class="testimonial-text">
+						<blockquote class="testimonial-text">
 							The AI algorithm is crazy good, it chooses the right meals for me every time. It's amazing
 							not to worry about food anymore!
-						</blackquote>
+						</blockquote>
 						<p class="testimonial-name">&mdash; Ben Hadly</p>
 					</figure>
 
 					<figure class="testimonial">
 						<img src="img/customers/steve.jpg" alt="Photo of customer Steve Miller" class="testimonial-img">
-						<blackquote class="testimonial-text">
+						<blockquote class="testimonial-text">
 							Omnifood is a life saver! I just started a company, so there's no time for cooking. I
 							couldn't live without my daily meals now!
-						</blackquote>
+						</blockquote>
 						<p class="testimonial-name">&mdash; Steve Miller</p>
 					</figure>
 
 					<figure class="testimonial">
 						<img src="img/customers/hannah.jpg" alt="Photo of customer Hannah Smith"
 							class="testimonial-img">
-						<blackquote class="testimonial-text">
+						<blockquote class="testimonial-text">
 							I got Omnifood for the whole family, and it frees up so much time! Plus, everything is
 							organic and vegan and without plastic.
-						</blackquote>
+						</blockquote>
 						<p class="testimonial-name">&mdash; Hannah Smith</p>
 					</figure>
 				</div>
@@ -359,7 +358,7 @@
 						</li>
 					</ul>
 					<div class="plan-signup">
-						<a href="#" class="btn-btn--full">Start eating well</a>
+						<a href="#" class="btn btn--full">Start eating well</a>
 					</div>
 				</div>
 				<div class="pricing-plans pricing-plan--complete">
@@ -400,24 +399,28 @@
 
 			<div class="container grid grid--4-cols">
 				<div class="feature">
+					<ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
 					<p class="feature-title">Never cook again!</p>
 					<p class="feature-text">
 						Our subscriptions cover 365 days per year, even including major holidays
 					</p>
 				</div>
 				<div class="feature">
+					<ion-icon class="feature-icon" name="nutrition-outline"></ion-icon>
 					<p class="feature-title">Local and organic</p>
 					<p class="feature-text">
 						Our cooks only use local, fresh and organic products to prepare your meals
 					</p>
 				</div>
 				<div class="feature">
+					<ion-icon class="feature-icon" name="leaf-outline"></ion-icon>
 					<p class="feature-title">No waster</p>
 					<p class="feature-text">
 						All our partners only use reusable containers to package all your meals
 					</p>
 				</div>
 				<div class="feature">
+					<ion-icon class="feature-icon" name="pause-circle-outline"></ion-icon>
 					<p class="feature-title">Pause anytime</p>
 					<p class="feature-text">
 						Going on vacation? Just pause your subscription and we refund unused days
