--- a/07-Omnifood_v7/index.html
+++ b/07-Omnifood_v7/index.html
@@ -7,7 +7,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/general.css">
@@ -17,7 +17,20 @@
 
 <body>
 
-	<header class="header"></header>
+	<header class="header">
+		<a href="#">
+			<img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo">
+		</a>
+		<nav class="main-nav">
+			<ul class="main-nav-list">
+				<li><a href="#" class="main-nav-link">How It Works</a></li>
+				<li><a href="#" class="main-nav-link">Meals</a></li>
+				<li><a href="#" class="main-nav-link">Testimonials</a></li>
+				<li><a href="#" class="main-nav-link">Pricing</a></li>
+				<li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
+			</ul>
+		</nav>
+	</header>
 
 	<main>
 
@@ -26,11 +39,11 @@
 				<div class="hero-text-box">
 					<h1 class="heading-primary">A healthy meal delivered to your door, every single day</h1>
 					<p class="hero-description">
-						The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to
-						your personal tastes and nutritional needs
+						The smart 365-days-per-year food subscription that will make you eat
+						healthy again. Tailored to your personal tastes and nutritional needs
 					</p>
 					<a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
-					<a href="#" class="btn btn--outline">Learn more &rarr;</a>
+					<a href="#" class="btn btn--outline">Learn more &darr;</a>
 					<div class="delivered-meals">
 						<div class="delivered-imgs">
 							<img src="img/customers/customer-1.jpg" alt="Customer photo">
@@ -40,13 +53,12 @@
 							<img src="img/customers/customer-5.jpg" alt="Customer photo">
 							<img src="img/customers/customer-6.jpg" alt="Customer photo">
 						</div>
-						<div class="delivered-text"><span>250,000+</span> meals delivered last year!</div>
+						<p class="delivered-text"><span>250,000+</span> meals delivered last year!</p>
 					</div>
 				</div>
 				<div class="hero-img-box">
-					<img src="img/hero.png"
-						alt="Woman enjoying food, meals in storage container and food bowls on a table"
-						class="hero-img ">
+					<img src="img/hero.png" alt="Woman enjoying food, meals in storage container and food bowls on a table"
+						class="hero-img">
 				</div>
 			</div>
 		</section>
