--- a/07-Omnifood_v2/index.html
+++ b/07-Omnifood_v2/index.html
@@ -13,14 +13,14 @@
 
 	<link rel="stylesheet" href="css/general.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/queries.css">
+	<link rel="stylesheet" href="css/queries.css ">
 
 	<title>Omnifood v2</title>
 </head>
 
 <body>
 
-	<header class="header">
+	<header class="header nav-open">
 		<a href="#">
 			<img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo">
 		</a>
@@ -33,6 +33,10 @@
 				<li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
 			</ul>
 		</nav>
+		<button class="btn-mobile-nav">
+			<ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+			<ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+		</button>
 	</header>
 
 	<main>
