--- a/07-Omnifood_v2/index.html
+++ b/07-Omnifood_v2/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-	<header class="header nav-open">
+	<header class="header">
 		<a href="#">
 			<img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo">
 		</a>
