--- a/07-Omnifood_v3/index.html
+++ b/07-Omnifood_v3/index.html
@@ -13,6 +13,7 @@
 
 	<link rel="stylesheet" href="css/general.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/queries.css">
 
 	<title>Omnifood v3</title>
 </head>
@@ -29,6 +30,10 @@
 				<li><a href="#" class="main-nav-link nav-cta">Section 5</a></li>
 			</ul>
 		</nav>
+		<button class="btn-mobile-nav">
+			<ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+			<ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+		</button>
 	</header>
 
 	<main>
